# contacts-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
sample/: models.py
src/: main.py
src/cli/: completer.py  interface.py
src/commands/: contact_commands.py  note_commands.py
src/models/: address.py  address_book.py  birthday.py  email.py  email_.py  fields.py  note.py  note_book.py  record.py
src/utils/: command_parser.py  data_handler.py  input_error.py
tests/: test_contact_commands.py  test_interface.py  test_note_commands.py
