[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contacts-bot"
version = "0.1.0"
description = "A contacts bot for managing contacts"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Ilya Fefelov", email = "ilya@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "colorama>=0.4.4"
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
contact_bot = "main:main"
